moved:create post page

--- a/src/app/page/discussions/group-feed/group-feed.component.css
+++ b/src/app/page/discussions/group-feed/group-feed.component.css
@@ -6,3 +6,10 @@
 .main-title{
     margin: 12px 0px 0px 12px;
 }
+
+.float_btn {
+    position: fixed;
+    right: 15px;
+    top: 20px;
+    transition: all 250ms ease;
+}
