--- a/src/app/page/discussions/group-feed/group-feed.component.html
+++ b/src/app/page/discussions/group-feed/group-feed.component.html
@@ -24,6 +24,13 @@
 
 
     </div>
-
-
+    <button mat-mini-fab
+    class="float"
+    (click)="onCreate()">
+<mat-icon>mode_edit</mat-icon>
+</button>
+   
 </app-event-sidebar-desktop>
+
+
+
