--- a/src/app/page/discussions/group-feed/group-feed.component.css
+++ b/src/app/page/discussions/group-feed/group-feed.component.css
@@ -1,6 +1,14 @@
 .spaces{
     background-color: #E8ECF2;
     padding: 12px 6px;
+    position:absolute;
+
+    box-sizing: border-box;
+
+    width:100%;
+    height:100%;
+
+    overflow: scroll;
 }
 
 .main-title{
@@ -8,8 +16,9 @@
 }
 
 .float_btn {
-    position: fixed;
-    right: 15px;
-    top: 20px;
+    position: absolute;
+    z-index: 101;
+    right: 40px;
+    bottom: 20px;
     transition: all 250ms ease;
 }
