--- a/src/app/page/group-details/group-details.component.html
+++ b/src/app/page/group-details/group-details.component.html
@@ -55,7 +55,7 @@
       </table>
     </div>
     <div class="container join_button_cont">
-      <button class="join_button">Join</button>
+      <button class="join_button clickable" (click)=onJoinClicked()>Join</button>
     </div>
   </div>
 
