Implement people list
People in a community will be pulled from the body corresponding to the community
Thus, the logic is very similar to that of the body-details page

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -14,7 +14,7 @@
             <p *ngIf="followers" class="followers_posts">
               {{ followers }} followers
             </p>
-            <p class="card-sub-title">
+            <p *ngIf="subtitle" class="card-sub-title">
               {{ subtitle }}
             </p>
           </div>
