--- a/src/app/page/group-details/group-details.component.css
+++ b/src/app/page/group-details/group-details.component.css
@@ -307,3 +307,11 @@ body {
     background-color: aliceblue;
     border-radius: 20px;
 }
+
+
+.role-container{
+    margin: 12px;
+    padding: 12px;
+    border-radius: 6px;
+    border: 1px solid #E8ECF2;
+}
