Connect feed page to backend
- Posts are now pulled from the backend
- A variable name (reaction(s)_count) in interfaces.ts changed to keep it consistent with the backend
- Images kept scrollable horizontally

--- a/src/app/card/communitypost-card/communitypost-card.component.css
+++ b/src/app/card/communitypost-card/communitypost-card.component.css
@@ -172,6 +172,19 @@ span {
     margin-bottom: inherit;
     display: block;
 
+    max-height: 600px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+
+}
+img.img-responsive{
+    max-height:50vh;
+    max-width: 50vh;
+
+    height: auto;
+    width: auto;
+    margin: 12px;
 }
 
 .footer div {
