Implement routing of group card to group feed page (and more)
bunch of changes in this commit:
- made images scrollable in x and y on post
- fixed shareable link bug
- group on click leads to the group-feed page via str_id
- add edit, delete button in the overflow menu of post (appears when current user has appropriate permissions)
- marked some functions that are yet to be connected to API

--- a/src/app/card/communitypost-card/communitypost-card.component.css
+++ b/src/app/card/communitypost-card/communitypost-card.component.css
@@ -176,7 +176,7 @@ span {
 
     max-height: 600px;
     overflow-x: scroll;
-    overflow-y: hidden;
+    overflow-y: scroll;
     white-space: nowrap;
 
 }
