--- a/src/app/page/group-details/group-details.component.html
+++ b/src/app/page/group-details/group-details.component.html
@@ -66,7 +66,8 @@
       </mat-tab>
       <mat-tab label="People">
 
-        <ng-container *ngFor="let role of group.body.roles">
+        hola
+        <!-- <ng-container *ngFor="let role of group.body.roles">
           
           <div class="role-container">
             <h4>{{ role.name }}</h4>
@@ -78,7 +79,7 @@
 
 
         </ng-container>
-
+ -->
       </mat-tab>
 
       <!-- <mat-tab label="third">
