--- a/src/app/card/communitypost-card/communitypost-card.component.html
+++ b/src/app/card/communitypost-card/communitypost-card.component.html
@@ -70,23 +70,27 @@
         > {{ printable_date }}</p>
       </td>
 
-      <td
-        *ngIf="post.status !== undefined && post.status !== 1"
-      >
-      <div 
-        class="status-indicator"
-        *ngIf="post.status == 0"
-        style="border-color: #f7b100;"
-      >
-        <p style="color: #f7b100;">Pending</p>
-      </div>
-      <div 
-        class="status-indicator"
-        *ngIf="post.status == 2"
-        style="border-color: red;"
-      >
-        <p style="color: red;">Rejected</p>
-      </div>
+      <td *ngIf="post.status !== undefined && post.status !== 1">
+        <ng-container [ngSwitch]="post.status">
+          <ng-container *ngSwitchCase="0">
+            <div 
+              class="status-indicator"
+              *ngIf="post.status == 0"
+              style="border-color: #f7b100;"
+            >
+              <p style="color: #f7b100;">Pending</p>
+            </div>
+          </ng-container>
+          <ng-container *ngSwitchCase="2">
+            <div 
+              class="status-indicator"
+              *ngIf="post.status == 2"
+              style="border-color: red;"
+            >
+              <p style="color: red;">Rejected</p>
+            </div>
+          </ng-container>
+        </ng-container>
       </td>
       <td align="right">
         <button mat-button [matMenuTriggerFor]="menu">
