--- a/src/app/page/discussions/add-post/add-post.component.css
+++ b/src/app/page/discussions/add-post/add-post.component.css
@@ -1,9 +1,149 @@
-.head-card {
-    height: 34px;
-    margin-top: -10px;
-    padding: 16px;
-    display: flex;
+#addpost-header-container{
+    border-bottom: 1px solid #cfd0d3;
+    text-align: center;
 }
+#user-container{
+    display:flex;
+    align-items: center;
+}
+#username-container{
+    padding: 6px;
+}
+#public-indicator{
+    border: 1px solid #dadadd;
+    color: #47484d;
+    border-radius: 600px;
+    width: max-content;
+
+    font-size: small;
+    
+    padding: 3px 5px;
+    margin-top: 6px;
+    
+    display: flex;
+    align-items: center;
+}
+
+#post-content-input{
+    box-sizing: border-box;
+
+    font: 16px 'Roboto';
+
+    border: none;
+    
+    width: 100%;
+    height: 120px;
+    
+    padding: 6px;
+
+    border-bottom: 1px #cfd0d3 solid;
+}
+
+#image-container{
+    padding: 12px;
+
+    height: max-content;
+
+    border-radius: 12px;
+    border: 1px solid #dadadd;
+
+    display: flex;
+    align-items: center;
+
+    white-space: nowrap;
+    overflow-x: scroll;
+}
+img.img-attached{
+    max-height: 30vh;
+    max-width: 30vw;
+
+    height: auto;
+    width: auto;
+
+    margin: 6px;
+}
+.img-attached-close{
+    border-radius: 50%;
+
+    height: 18px;
+    width: 18px;
+
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: #000;
+
+    color: #fff;
+
+    position: absolute;
+    right: 12px;
+    top: 12px;
+}
+
+#img-add-bigplus{
+    padding: 24px;
+    height: 180px;
+    width: 120px;
+
+    border-radius: 12px;
+    border: 1px solid #dadadd;
+
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.tagging-container{
+    box-sizing: border-box;
+
+    padding: 12px;
+    margin: 12px 0px;
+
+    border: 1px solid #dcdddf;
+    border-radius: 12px;
+}
+.tagging-container-header{
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+.tag-type-container{
+    box-sizing: border-box;
+    width:10%;
+    padding-left: 12px;
+
+    font: 14px 'Roboto';
+    /* text-align: center; */
+}
+.tag-search-container{
+    width: 90%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color: #a2a3aa;
+}
+input.taggable-search{
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+.tagged{
+    display: inline-flex;
+    align-items: center;
+
+    font: 12px 'Roboto';
+
+    color: #767881;
+    border-radius: 600px;
+    border: 1px solid #767881;
+
+    margin: 6px;
+    padding: 2px 6px;
+}
+
 .profile-pic {
     width: 40px;
     height: 40px;
@@ -11,22 +151,6 @@
     margin-top: -3px;
     flex: 0 0 40px;
 }
-
-#ldap {
-    color: #eee;
-    font-size: 10pt;
-}
-
-
-#searchbox {
-    margin: 10px;
-    white-space: nowrap;
-}
-
-.searchinput {
-    min-width: 60%;
-}
-
 #post_container{
     border-radius: 8px;
     border: 1px solid black;
@@ -34,59 +158,26 @@
     min-height: 150px;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 7fr;
-    grid-gap: 20px;
-    
-}
-
-.grid-container_location {
-    display: grid;
-    grid-template-columns: 1fr 6fr 1fr;
-    grid-gap: 20px;
-    
-}
-
-#container{
-    border-radius: 8px;
-    border: 1px solid black;
-    height: min-content;
-    margin: 4px;
-
-}
-
-#hidden-container{
-    padding: 0px;
-    margin: 2px;
-    height: min-content;
-}
-
-.taggables{
-    border-radius: 20px;
-    padding: 2px;
-    margin: 2px;
-    background:transparent;
-    display: inline;
-    border: 2px solid gray ;
+.search-icon{
+    position:relative;
+    top:6px;
 }
 
 #submit_btn{
-    width:100px;
-    background-color:#0D4BA8;
-    border-radius: 20px;
+    width: max-content;
+
+    background-color:#435ffe;
+    border-radius: 600px;
+
     color: white;
+
     margin: 10px;
-}
-#link_btn{
-    width: 0px;
-    margin:1px;
-    background-color:gray;
+    padding: 0px 36px;
 }
 
 .bottom_button{
-    display: "flex"; 
-    height: "80px";
+    display: flex; 
+    align-items: center;
     justify-content: "space-between"
 }
 
